Fixed grid overflow

--- a/assets/watch.css
+++ b/assets/watch.css
@@ -1,8 +1,12 @@
 #container{
-    
+    height:100vh;
     display:grid;
-    grid-template-columns: 50%,50%;
-    grid-template-rows: 10%,40%,40%;
+    gap: 5px;
+    min-width: 0px;
+    grid-template-columns:  repeat(2, minmax(0, 1fr));
+    grid-template-rows: minmax(0,60px),minmax(0,1fr),minmax(0,1fr),minmax(60px,60px);
+    border: 2px solid blue;
+    
 }
 
 #app-header {
@@ -16,12 +20,14 @@
     justify-content:space-evenly;
     align-items: center;
     column-gap:3px;
+    background-color:rgb(233, 103, 103)
 }
 
 
 .header_input{
     border: 2px solid red;
     width: 30%;
+    
 
 }*/
 #airportMap{
@@ -37,6 +43,7 @@
     grid-column-end: 3;
     grid-row-start:2;
     grid-row-end:3;
+    
 }
 
 #rpanel2{
@@ -47,6 +54,17 @@
     grid-row-end:4;
 }
 
+#weatherWidget{
+    
+    grid-column-start: 1;
+    grid-column-end: 4;
+    grid-row-start: 4;
+    grid-row-end:5;
+    border: 2px solid red;
+    background-color:rgb(103, 224, 233)
+}
+
 body{
-    background-color:lightgray
+    background-color:lightgray;
+    
 }
